mod web to work on github page

--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
     </div>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="html5sortable.js"></script>
-    <script src="study.js"></script>
+    <script src="//html5sortable.js"></script>
+    <script src="//study.js"></script>
 </body>
