--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
     </div>
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="html5sortable.js" type="text/javascript"></script>
     <script src="study.js" type="text/javascript"></script>
 </body>
