--- a/index.html
+++ b/index.html
@@ -44,12 +44,13 @@
         </div>
     </div>
 
-    <script src="https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="html5sortable.js" type="text/javascript"></script>
     <script src="study.js" type="text/javascript"></script>
     <script type="module">
         // Import the functions you need from the SDKs you need
+        import "https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js";
+        import "https://www.gstatic.com/firebasejs/11.0.2/firebase-database.js";
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js";
         import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-analytics.js";
         // TODO: Add SDKs for Firebase products that you want to use
