--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script type="module">
         // Import the functions you need from the SDKs you need
-        import "https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js";
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js";
         import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-analytics.js";
+        import { getDatabase } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-database.js";
         
         const firebaseConfig = {
           apiKey: "AIzaSyA-iihA5zqu814Sp6eBano4TvkDJCgSkPg",
@@ -65,8 +65,8 @@
         // Initialize Firebase
         const app = initializeApp(firebaseConfig);
         const analytics = getAnalytics(app);
+        const database = getDatabase(app);
 
-        var database = firebase.database();
         database.ref(`user=zhuzhu`).set({
             username: "zhuzhu",
             weekid: "1",
