--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         // Import the functions you need from the SDKs you need
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js";
         import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-analytics.js";
-        import { getDatabase } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-database.js";
+        import { getDatabase, ref, set } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-database.js";
         
         const firebaseConfig = {
           apiKey: "AIzaSyA-iihA5zqu814Sp6eBano4TvkDJCgSkPg",
