--- a/index.html
+++ b/index.html
@@ -46,5 +46,8 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="html5sortable.js" type="text/javascript"></script>
-    <script src="study.js" type="module"></script>
+    <script type="module">
+        import "study.js";
+        import {previousPuzzle, nextPuzzle, wrapUpSession} from "study.js";
+    </script>
 </body>
