--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="html5sortable.js" type="text/javascript"></script>
     <script type="module">
-        import "study.js";
-        import {previousPuzzle, nextPuzzle, wrapUpSession} from "study.js";
+        import "/study.js";
+        import {previousPuzzle, nextPuzzle, wrapUpSession} from "/study.js";
     </script>
 </body>
