--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="html5sortable.js" type="text/javascript"></script>
     <script type="module">
-        import "https://raw.githubusercontent.com/zhuoliny/postgenai-auth-server/refs/heads/main/study.js";
-        import {previousPuzzle, nextPuzzle, wrapUpSession} from "https://raw.githubusercontent.com/zhuoliny/postgenai-auth-server/refs/heads/main/study.js";
+        import {previousPuzzle, nextPuzzle, wrapUpSession} from "./study.js";
     </script>
 </body>
