--- a/index.html
+++ b/index.html
@@ -49,4 +49,5 @@
     <script type="module">
         import {previousPuzzle, nextPuzzle, wrapUpSession} from "./study.js";
     </script>
+    <script src="study.js" type="text/javascript"></script>
 </body>
