--- a/index.html
+++ b/index.html
@@ -38,16 +38,21 @@
         </div>
 
         <div class="col col-12">
-            <button id="prevBtn" class="button bg-navy" onclick="previousPuzzle()">Previous</button>
-            <button id="nxtBtn" class="button bg-navy" onclick="nextPuzzle()">Next</button>
-            <button id="submitBtn" class="button bg-red" onclick="wrapUpSession()">Submit</button>
+            <button id="prevBtn" class="button bg-navy" onclick="module_handler.previousPuzzle()">Previous</button>
+            <button id="nxtBtn" class="button bg-navy" onclick="module_handler.nextPuzzle()">Next</button>
+            <button id="submitBtn" class="button bg-red" onclick="module_handler.wrapUpSession()">Submit</button>
         </div>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="html5sortable.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        const module_handler = {};
+      </script>
     <script type="module">
         import {previousPuzzle, nextPuzzle, wrapUpSession} from "./study.js";
+        module_handler.previousPuzzle = previousPuzzle;
+        module_handler.nextPuzzle = nextPuzzle;
+        module_handler.wrapUpSession = wrapUpSession;
     </script>
-    <script src="study.js" type="text/javascript"></script>
 </body>
